Fixed auto-completion menu scrollbars not being styled in dark theme.

--- a/bin/resources/app/themes/dark/dark.css
+++ b/bin/resources/app/themes/dark/dark.css
@@ -159,20 +159,20 @@ background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAACCAYAAACZgb
 	bottom: 12px !important;
 }
 /* */
-#main ::-webkit-scrollbar {
+::-webkit-scrollbar {
 	background: #000;
 	width: 12px;
 	height: 12px;
 }
-#main ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
 	background-color: #555555;
 	border-radius: 6px;
 	border: 2px solid black;
 	min-height: 40px;
 }
-#main ::-webkit-scrollbar-corner {
+::-webkit-scrollbar-corner {
     background: #000;
 }
-#main ::-webkit-scrollbar-track{
+::-webkit-scrollbar-track{
 	background-color:#000;
 }
